src/layout/header/header.module.css
.container {
  background-color: #2b4757;
}

.cart-container {
  margin-right: 6%;
}

.container__menu {
  align-items: center;
  display: flex;
}

.container__search {
  margin: 2% 0;
  text-align: center;
}

.container__search .search-product {
  background: transparent;
  border: none;
  border-bottom: 2px solid #daf1c4;
  color: #f1f4f6;
  font-size: 1.5rem;
  padding: 7px 0;
  outline: 0;
  width: 80%;
}

.container__search input[type="search"]::placeholder {
  color: #daf1c4;
}

.logo__name-container{
  cursor: pointer;
  margin-left: 4%;
}

.logo__name {
  color: #eaf5d4;
  font-family: fantasy;
}

.nav-container {
  flex: 1;
}

.badge-count {
  background-color: #daf1c4;
  border: 1px solid #2b4757;
  border-radius: 5px;
  color: #2b4757;
  padding: 0px 5px;
  text-decoration: none;
};

